# patterns

./: CMakeLists.txt
generative/abstract_factory/: abstract_factory.cpp
generative/factory_method/: factory_method.cpp
